# retroshell

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.qa  Dockerfile.vm  LICENSE  README.md  READY_FOR_UBUNTU_VERIFICATION.md  RFC-0002-RetroShell.md  RFC-0003-Finder.md  STATUS.md  build.sh  build_and_verify_hdr_vrr.sh  docker-entrypoint.sh  run_doom_showcase.sh
apps/appstore/: App.toml  Cargo.toml
apps/appstore/src/: main.rs
apps/finder/: App.toml  Cargo.toml
apps/finder/src/: file_ops.rs  main.rs
apps/settings/: App.toml  Cargo.toml
apps/settings/src/: main.rs
apps/terminal/: App.toml  Cargo.toml
apps/terminal/src/: main.rs  pty.rs  tabs.rs  terminal.rs  vt_parser.rs
apps/textedit/: App.toml  Cargo.toml
apps/textedit/src/: main.rs
crates/retro-bus/: Cargo.toml
crates/retro-bus/src/: lib.rs  message.rs  service_registry.rs  transport.rs
crates/retro-bus/tests/: bus_tests.rs
crates/retro-compositor/: Cargo.toml
crates/retro-compositor/src/: frame_timing.rs  hdr.rs  lib.rs  main.rs  perf_budget.rs  session_drm.rs  workspace_focus.rs
crates/retro-compositor/tests/: compositor_tests.rs
crates/retro-kit/: Cargo.toml
crates/retro-kit/src/: accessibility.rs  button.rs  clipboard.rs  dialog.rs  dnd.rs  dock_view.rs  event.rs  icon_view.rs  label.rs  layout.rs  lib.rs  list_view.rs  menu.rs  menu_bar.rs  monospace_view.rs  popup_button.rs  progress_bar.rs  scroll_view.rs  slider.rs  split_view.rs  status_bar.rs  tab_view.rs  text_field.rs  theme.rs  toolbar.rs  tree_view.rs  widget.rs  window.rs  workspace_grid_view.rs
crates/retro-kit/tests/: kit_tests.rs
crates/retro-render/: Cargo.toml
crates/retro-render/shaders/: rect.wgsl  theme.wgsl
crates/retro-render/src/: event_loop.rs  font.rs  lib.rs  primitives.rs  render_tree.rs  renderer.rs  shader.rs  surface.rs  texture.rs  theme_renderer.rs  windowing.rs
crates/retro-render/tests/: render_tests.rs
crates/retro-sdk/: Cargo.toml
crates/retro-sdk/src/: lib.rs
crates/retro-sdk/tests/: sdk_tests.rs
crates/retro-shell/: Cargo.toml
crates/retro-shell/src/: a11y_actions.rs  a11y_prefs.rs  application_registry.rs  atspi_bus.rs  audio.rs  capture.rs  chrome_protocol.rs  desktop_manager.rs  display_arrange.rs  display_settings.rs  dock.rs  fdo_notifications.rs  foreign_toplevel.rs  foreign_toplevel_client.rs  i18n.rs  idle_policy.rs  keyboard_nav.rs  launch_services.rs  layer_shell_client.rs  lib.rs  main.rs  menu_server.rs  mime_open.rs  network_connect.rs  network_manager.rs  notification_center.rs  polkit_agent.rs  portal.rs  portal_dbus.rs  portal_extra.rs  power.rs  screencast_pw.rs  session_actions.rs  session_clients.rs  session_manager.rs  session_packaging.rs  session_recovery.rs  shell_scale.rs  startup_budget.rs  theme_manager.rs  (+3 more)
crates/retro-shell/tests/: shell_tests.rs
docs/: AGENTS 2.md  AGENTS.md  ARCHITECTURE 2.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONFIGURATION.md  CONTRIBUTING.md  DEEP_AUDIT_90_CLAIM.md  FULL_AUDIT_2026-07-11.md  GOAL_DEEP_AUDIT_FINAL.md  HDR_VRR_IMPLEMENTATION.md  KEYBOARD_SHORTCUTS.md  README 2.md  README.md  RFC-0001-RetroKit.md  RFC-0004-AppBundles.md  RFC-0005-ThemeSystem.md  ROADMAP.md  STYLE_GUIDE.md  TECH_STACK.md  WARPATH_SCORECARD.md  audit_2026-07-09.md  audit_2026-07-11.md  implementation_plan.md
docs/agents/: app-engineer.md  architect.md  framework-engineer.md  qa-engineer.md  release-engineer.md  shell-engineer.md  ui-designer.md
docs/rfc/: RFC-0001-RetroKit.md  RFC-0002-RetroShell.md  RFC-0003-Finder.md  RFC-0004-AppBundles.md  RFC-0005-ThemeSystem.md  RFC-0006-RetroBus.md  RFC-0007-WindowManager.md  RFC-0008-MenuServer.md  RFC-0009-Dock.md  RFC-0010-LaunchServices.md  RFC-0011-SettingsService.md  RFC-0012-AppSDK.md
docs/specs/: dock.md  finder.md  iconography.md  menu-bar.md  themes.md  windows.md
packaging/: README.md  retroshell-wayland.desktop  retroshell.desktop  retroshell.service
scripts/: install-session-files.sh  start-retroshell  verify_daily_driver_checklist.sh  verify_greeter_session.sh  verify_pi.sh  verify_session_packaging.sh
themes/graphite/: Colors.toml  Theme.toml
themes/high-contrast/: Colors.toml  Metrics.toml  Theme.toml  Typography.toml
themes/oled-graphite/: Colors.toml  Metrics.toml  Theme.toml
themes/platinum/: Colors.toml  Theme.toml  Typography.toml
