[workspace]
resolver = "2"
members = [
    "crates/retro-render",
    "crates/retro-kit",
    "crates/retro-shell",
    "crates/retro-bus",
    "crates/retro-sdk",
    "crates/retro-compositor",
    "apps/finder",
    "apps/settings",
    "apps/textedit",
    "apps/terminal",
    "apps/appstore",
]

[workspace.dependencies]
wgpu = "22.0"
cosmic-text = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
wayland-client = "0.31"
wayland-protocols = "0.32"
zbus = "4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25"
futures = "0.3"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
uuid = { version = "1", features = ["v4"] }
