[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "settings"
path = "src/main.rs"

[dependencies]
retro-sdk = { path = "../../crates/retro-sdk" }
retro-kit = { path = "../../crates/retro-kit" }
retro-shell = { path = "../../crates/retro-shell" }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
