[package]
name = "retro-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
zbus = { workspace = true, optional = true }

[features]
default = ["dbus"]
dbus = ["zbus"]
