[package]
name = "retro-compositor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "retro-compositor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_x11",
    "wayland_frontend",
    "renderer_gl",
    "desktop",
    # XWayland integration (smithay 0.7 feature name is "xwayland").
    # Nested under X11/Xvfb the path is best-effort: code starts Xwayland when
    # present, but a full rootless WM under another X server is limited.
    "xwayland",
] }
