[package]
name = "retro-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
retro-kit = { path = "../retro-kit" }
retro-bus = { path = "../retro-bus" }
retro-render = { path = "../retro-render" }
bytemuck = { workspace = true }
futures = { workspace = true }
wgpu = { workspace = true }
winit = "0.30"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
