[package]
name = "retro-shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "retro-shell"
path = "src/main.rs"

[dependencies]
retro-kit = { path = "../retro-kit" }
retro-render = { path = "../retro-render" }
retro-bus = { path = "../retro-bus" }
retro-sdk = { path = "../retro-sdk" }
winit = "0.30"
serde = { workspace = true }

serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

# NetworkManager / UPower D-Bus clients (Linux only; host tests use Unavailable fallbacks).
# Wayland layer-shell + foreign-toplevel-list clients for protocol-backed chrome / task list.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true, features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = "0.3"
